// Copyright (C) 2018 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package vulkan;
option go_package = "github.com/google/gapid/gapis/api/vulkan";

// DisplayToSurface is an extra added to VkCreateSwapchainKHR to indicate the
// replay should display to the original surface.
message DisplayToSurface {
  map<uint64, uint32> surface_types = 1;
}
