// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pod;
option java_package = "com.google.gapid.proto.service.pod";
option java_outer_classname = "Pod";

message Value {
  oneof val {
    float float = 1;
    double double = 2;
    uint64 uint = 3;
    sint64 sint = 4;
    uint32 uint8 = 5;
    sint32 sint8 = 6;
    uint32 uint16 = 7;
    sint32 sint16 = 8;
    uint32 uint32 = 9;
    sint32 sint32 = 10;
    uint64 uint64 = 11;
    sint64 sint64 = 12;
    bool bool = 13;
    string string = 14;
    FloatArray float_array = 15;
    DoubleArray double_array = 16;
    Uint64Array uint_array = 17;
    Sint64Array sint_array = 18;
    bytes uint8_array = 19;
    Sint32Array sint8_array = 20;
    Uint32Array uint16_array = 21;
    Sint32Array sint16_array = 22;
    Uint32Array uint32_array = 23;
    Sint32Array sint32_array = 24;
    Uint64Array uint64_array = 25;
    Sint64Array sint64_array = 26;
    BoolArray bool_array = 27;
    StringArray string_array = 28;
  }
}

message FloatArray  { repeated float val = 1; }
message DoubleArray { repeated double val = 1; }
message Uint32Array { repeated uint32 val = 1; }
message Sint32Array { repeated sint32 val = 1; }
message Uint64Array { repeated uint64 val = 1; }
message Sint64Array { repeated sint64 val = 1; }
message BoolArray   { repeated bool val = 1; }
message StringArray { repeated string val = 1; }
